.gradle/gradle.log
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:349: error: unmappable character for encoding Cp1251
         * --- –û–ë–Ø–ó–ê–¢–ï–õ–¨–ù–û –í–´–ó–í–ê–¢–¨, –ï–°–õ–? –£ –¶–ï–õ–ï–í–û–ì–û –ú–ï–¢–û–î–ê –ï–°–¢–¨ –ü–ê–†–ê–ú–ï–¢–†–´ ---
                                                             ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:390: error: unmappable character for encoding Cp1251
         * –?–∑–º–µ–Ω—è–µ—Ç —Ç–∏–ø, –≤–æ–∑–≤—Ä–∞—â–∞–µ–º—ã–π —Ü–µ–ª–µ–≤—ã–º –º–µ—Ç–æ–¥–æ–º.
            ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:404: error: unmappable character for encoding Cp1251
         * –?–∑–º–µ–Ω—è–µ—Ç —Ç–∏–ø, –≤–æ–∑–≤—Ä–∞—â–∞–µ–º—ã–π —Ü–µ–ª–µ–≤—ã–º –º–µ—Ç–æ–¥–æ–º.
            ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:414: error: unmappable character for encoding Cp1251
         * --- –û–ë–Ø–ó–ê–¢–ï–õ–¨–ù–û –í–´–ó–í–ê–¢–¨, –ï–°–õ–? –ù–£–ñ–ï–ù –•–£–ö-–ú–ï–¢–û–î, –ê –ù–ï –ü–†–û–°–¢–û return SOME_CONSTANT ---
                                                             ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:426: error: unmappable character for encoding Cp1251
         * --- –û–ë–Ø–ó–ê–¢–ï–õ–¨–ù–û –í–´–ó–í–ê–¢–¨, –ï–°–õ–? –ù–£–ñ–ï–ù –•–£–ö-–ú–ï–¢–û–î, –ê –ù–ï –ü–†–û–°–¢–û return SOME_CONSTANT ---
                                                             ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:428: error: unmappable character for encoding Cp1251
         * –•–£–ö-–ú–ï–¢–û–î –î–û–õ–ñ–ï–ù –ë–´–¢–¨ –°–¢–ê–¢–?–ß–ï–°–ö–?–ú, –ê –ü–†–û–í–ï–†–ö–? –ù–ê –≠–¢–û –ù–ï–¢. –ë—É–¥—å—Ç–µ –≤–Ω–∏–º–∞—Ç–µ–ª—å–Ω—ã.
                                                            ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:428: error: unmappable character for encoding Cp1251
         * –•–£–ö-–ú–ï–¢–û–î –î–û–õ–ñ–ï–ù –ë–´–¢–¨ –°–¢–ê–¢–?–ß–ï–°–ö–?–ú, –ê –ü–†–û–í–ï–†–ö–? –ù–ê –≠–¢–û –ù–ï–¢. –ë—É–¥—å—Ç–µ –≤–Ω–∏–º–∞—Ç–µ–ª—å–Ω—ã.
                                                                      ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:428: error: unmappable character for encoding Cp1251
         * –•–£–ö-–ú–ï–¢–û–î –î–û–õ–ñ–ï–ù –ë–´–¢–¨ –°–¢–ê–¢–?–ß–ï–°–ö–?–ú, –ê –ü–†–û–í–ï–†–ö–? –ù–ê –≠–¢–û –ù–ï–¢. –ë—É–¥—å—Ç–µ –≤–Ω–∏–º–∞—Ç–µ–ª—å–Ω—ã.
                                                                                             ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:439: error: unmappable character for encoding Cp1251
         * --- –û–ë–Ø–ó–ê–¢–ï–õ–¨–ù–û –í–´–ó–í–ê–¢–¨, –ï–°–õ–? –£ –•–£–ö-–ú–ï–¢–û–î–ê –ï–°–¢–¨ –ü–ê–†–ê–ú–ï–¢–†–´ ---
                                                             ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:446: error: unmappable character for encoding Cp1251
         * –í–ê–ñ–ù–´–ô –ú–û–ú–ï–ù–¢: LONG –? DOUBLE "–ó–ê–ù–?–ú–ê–Æ–¢" –î–í–ê –ù–û–ú–ï–†–ê.
                                            ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:446: error: unmappable character for encoding Cp1251
         * –í–ê–ñ–ù–´–ô –ú–û–ú–ï–ù–¢: LONG –? DOUBLE "–ó–ê–ù–?–ú–ê–Æ–¢" –î–í–ê –ù–û–ú–ï–†–ê.
                                                             ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:518: error: unmappable character for encoding Cp1251
         * –?–ª–∏ —Ç–∞–∫–æ–π:
            ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:580: error: unmappable character for encoding Cp1251
         * --- –û–ë–Ø–ó–ê–¢–ï–õ–¨–ù–û –í–´–ó–í–ê–¢–¨, –ï–°–õ–? –¶–ï–õ–ï–í–û–ô –ú–ï–¢–û–î –í–û–ó–í–†–ê–©–ê–ï–¢ –ù–ï void, –? –í–´–ó–í–ê–ù setReturnCondition ---
                                                             ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:580: error: unmappable character for encoding Cp1251
         * --- –û–ë–Ø–ó–ê–¢–ï–õ–¨–ù–û –í–´–ó–í–ê–¢–¨, –ï–°–õ–? –¶–ï–õ–ï–í–û–ô –ú–ï–¢–û–î –í–û–ó–í–†–ê–©–ê–ï–¢ –ù–ï void, –? –í–´–ó–í–ê–ù setReturnCondition ---
                                                                                                                          ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:651: error: unmappable character for encoding Cp1251
         * --- –û–ë–Ø–ó–ê–¢–ï–õ–¨–ù–û –í–´–ó–í–ê–¢–¨, –ï–°–õ–? –í–û–ó–í–†–ê–©–ê–ï–ú–û–ï –ó–ù–ê–ß–ï–ù–?–ï –£–°–¢–ê–ù–û–í–õ–ï–ù–û –ù–ê PRIMITIVE_CONSTANT ---
                                                             ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:651: error: unmappable character for encoding Cp1251
         * --- –û–ë–Ø–ó–ê–¢–ï–õ–¨–ù–û –í–´–ó–í–ê–¢–¨, –ï–°–õ–? –í–û–ó–í–†–ê–©–ê–ï–ú–û–ï –ó–ù–ê–ß–ï–ù–?–ï –£–°–¢–ê–ù–û–í–õ–ï–ù–û –ù–ê PRIMITIVE_CONSTANT ---
                                                                                                     ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:684: error: unmappable character for encoding Cp1251
         * --- –û–ë–Ø–ó–ê–¢–ï–õ–¨–ù–û –í–´–ó–í–ê–¢–¨, –ï–°–õ–? –í–û–ó–í–†–ê–©–ê–ï–ú–û–ï –ó–ù–ê–ß–ï–ù–?–ï –£–°–¢–ê–ù–û–í–õ–ï–ù–û –ù–ê ANOTHER_METHOD_RETURN_VALUE ---
                                                             ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:684: error: unmappable character for encoding Cp1251
         * --- –û–ë–Ø–ó–ê–¢–ï–õ–¨–ù–û –í–´–ó–í–ê–¢–¨, –ï–°–õ–? –í–û–ó–í–†–ê–©–ê–ï–ú–û–ï –ó–ù–ê–ß–ï–ù–?–ï –£–°–¢–ê–ù–û–í–õ–ï–ù–û –ù–ê ANOTHER_METHOD_RETURN_VALUE ---
                                                                                                     ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\AsmHook.java:728: error: unmappable character for encoding Cp1251
         * –ø—Ä–µ–¥—Å—Ç–∞–≤–ª—è–µ—Ç —Å–æ–±–æ–π –≤—ã–∑–æ–≤ —Å—É–ø–µ—Ä-–º–µ—Ç–æ–¥–∞. –?–Ω–∞—á–µ —ç—Ç–æ –ø—Ä–æ—Å—Ç–æ –ø—É—Å—Ç–æ–π –º–µ—Ç–æ–¥ –∏–ª–∏ return false/0/null –≤ –∑–∞–≤–∏—Å–∏–º–æ—Å—Ç–∏
                                                                                    ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\Hook.java:65: error: unmappable character for encoding Cp1251
     * –ø—Ä–µ–¥—Å—Ç–∞–≤–ª—è–µ—Ç —Å–æ–±–æ–π –≤—ã–∑–æ–≤ —Å—É–ø–µ—Ä-–º–µ—Ç–æ–¥–∞. –?–Ω–∞—á–µ —ç—Ç–æ –ø—Ä–æ—Å—Ç–æ –ø—É—Å—Ç–æ–π –º–µ—Ç–æ–¥ –∏–ª–∏ return false/0/null –≤ –∑–∞–≤–∏—Å–∏–º–æ—Å—Ç–∏
                                                                                ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\Hook.java:86: error: unmappable character for encoding Cp1251
     * –?—Å–ø–æ–ª—å–∑–æ–≤–∞—Ç—å –Ω–µ —Ä–µ–∫–æ–º–µ–Ω–¥—É–µ—Ç—Å—è, –ø–æ—Ç–æ–º—É —á—Ç–æ:
        ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\HookInjectorFactory.java:7: error: unmappable character for encoding Cp1251
 * "–?–∑ –∫–æ—Ä–æ–±–∫–∏" –¥–æ—Å—Ç—É–ø–Ω–æ –¥–≤–∞ —Ç–∏–ø–∞ –∏–Ω–∂–µ–∫—Ç–æ—Ä–æ–≤: MethodEnter, –∫–æ—Ç–æ—Ä—ã–π –≤—Å—Ç–∞–≤–ª—è–µ—Ç —Ö—É–∫ –Ω–∞ –≤—Ö–æ–¥–µ –≤ –º–µ—Ç–æ–¥,
     ^
C:\modding\firefix\build\sources\java\lc208\nam\hooklib\asm\ReturnValue.java:12: error: unmappable character for encoding Cp1251
     * –?—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è —Ç–æ–≥–¥–∞ –∏ —Ç–æ–ª—å–∫–æ —Ç–æ–≥–¥–∞, –∫–æ–≥–¥–∞ —Ü–µ–ª–µ–≤–æ–π –º–µ—Ç–æ–¥ –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç void.
        ^
1 warning

:processResources UP-TO-DATE
:classes
:jar
:compileTestJava UP-TO-DATE
:processTestResources UP-TO-DATE
:testClasses UP-TO-DATE
:test UP-TO-DATE
:extractMcpData UP-TO-DATE
:getVersionJson
:extractUserDev UP-TO-DATE
:genSrgs SKIPPED
:reobf
:assemble
:check UP-TO-DATE
:build

BUILD SUCCESSFUL

Total time: 7.896 secs
